--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,7 @@ jobs:
     - uses: msys2/setup-msys2@v2
       with:
         update: true
+        cache: false
 
     - name: Build
       shell: msys2 {0}
